# Baseline-Lidar-assisted-Controller

./: .gitignore  LICENSE  ListOfAvrSwapVariables.txt  README.md
DISCON/: CMakeLists.txt
DISCON/src/: DISCON.f90  DLLChain_Subs.f90  DLLChain_Types.f90
FFP/: CMakeLists.txt
FFP/src/: FFP.f90  FFP_Subs.f90  FFP_Subs_ParseInputs.f90  FFP_Types.f90
FFP_v2/: CMakeLists.txt
FFP_v2/src/: FFP_v2_Subs.f90  FFP_v2_Types.f90
LDP/: CMakeLists.txt
LDP/src/: LDP.f90  LDP_Subs.f90  LDP_Subs_ParseInputs.f90  LDP_Types.f90
LDP_v1/src/: LDP_v1_Subs.f90
LDP_v2/src/: LDP_v2_Subs.f90  LDP_v2_Types.f90
LDP_v3/: CMakeLists.txt
LDP_v3/src/: LDP_v3_Subs.f90  LDP_v3_Types.f90
ROSCO/: CMakeLists.txt
ROSCO/src/: Constants.f90  Controllers.f90  Functions.f90  ROSCO.f90  ROSCO2d6.F90  ROSCO_IO.f90  ROSCO_Types.f90  ReadSetParameters.f90  filters.f90
Release/IEA15MW_01/: DISCON.IN  FFP_PW.IN  IEA-15-240-RWT-Monopile.fst  IEA-15-240-RWT.fst  ROSCO.IN  ROSCO2.IN  RunExample.m  WRAPPER.IN
Release/IEA15MW_02/: FFP_PW.IN  IEA-15-240-RWT-UMaineSemi.fst  IEA-15-240-RWT.fst  LDP_v1.IN  LDP_v2.IN  ROSCO2.IN  RunExample.m  WRAPPER.IN  test.m
Release/IEA15MW_03/: FFP_PW.IN  IEA-15-240-RWT-Monopile.fst  RunExample.m  WRAPPER.IN
Release/IEA15MW_04/: RunExample.m  TurbSim2aInputFileTemplateIEA15MW.inp
Release/IEA15MW_05/: ROSCO_v2d6.IN  RunExample.m
Release/IEA15MW_06/: ROSCO_v2d6.IN  RunExample.m
Release/IEA15MW_07/: FFP_v1.IN  IEA-15-240-RWT-Monopile.fst  LDP_v1.IN  RunExample.m  U18_4096x64x64_32768x512x512m_t0_13d33_ae0d2882L49Gamma3d1Seed1.inp
(+81 files in other folders)
